<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HintActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFF00"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="com.bignerdranch.android.geoquiz.CheatActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/are_you_sure_you_want_a_hint"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/hint_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="#FF00FF"
            android:textAlignment="center"
            android:text="@string/hint2"
            android:textColor="#000000"
            android:textSize="25sp" />

        <Button
            android:id="@+id/show_hint_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_hint"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>