<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5eff27"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="25.0sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content"

                android:id="@+id/marksView"

                android:layout_marginLeft="90dp"
                android:layout_weight="1"
                android:text="@string/mark"

                android:textStyle="bold" />

            <TextView
                android:id="@+id/mark_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/questionsView"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginLeft="40dp"
                android:layout_weight="1"
                android:text="@string/completednumb"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/answer_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="25sp" />
        </LinearLayout>


        <!--<TextView-->
        <!--android:id="@+id/Question"-->
        <!--android:layout_marginTop="1dp"-->
        <!--android:layout_width="410dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:text=" 1. Canberra is the capital of Australia."-->
        <!--android:textAlignment="center"-->
        <!--android:paddingTop="4dp"-->
        <!--android:textColor="@android:color/black"-->
        <!--android:textSize="20sp"-->
        <!--android:background="#fc00ff"-->

        <!--/>-->

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#FF00FF"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/True"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="0.5dp"
                android:background="#0707d5"
                android:text="True"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/False"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="0.5dp"
                android:background="#0707d5"
                android:text="False"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/Hint"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="1dp"
                android:background="#0707d5"
                android:text="HINT!"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Cheat"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:background="#0707d5"
                android:text="CHEAT!"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/Prev"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="1dp"
                android:background="#0707d5"
                android:text="@string/Prev"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Next"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:background="#0707d5"
                android:text="@string/Next"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>